# slop

./: .envrc  .gitignore  AGENTS.md  Dockerfile  README.md  backup.sh  fly.toml  plan.md  pyproject.toml  tagflow-demo.py
media/: interview-base.html  interview.html
src/slop/: __init__.py  app.py  audio.py  conf.py  gemini.py  models.py  parameter.py  promptflow.py  rest.py  sndprompt.py  store.py  transcribe.py  views.py
tests/: README.md  conftest.py  gemini_tests.py  run_all.py  test_promptflow_lazy_files.py  test_transcribe.py  testing.py
tests/gemini/: test_basic_generation.py  test_conversation.py  test_error_handling.py  test_file_upload.py  test_function_calling.py  test_list_files.py  test_streaming.py  test_thinking.py  utils.py
txt/: gemini-funcall-rest.txt
