[project]
name = "slop"
version = "0.1.0"
description = "Language model API client"
readme = "README.md"
authors = [{ name = "Mikael Brockman", email = "mikael@brockman.se" }]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.6.0",
    "rich>=13.9.4",
    "httpx-sse>=0.4.0",
    "tagflow==0.12.0",
    "python-multipart>=0.0.20",
    "pydub>=0.25.1",
    "python-docx>=1.1.2",
    "anyio>=4.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-xdist>=3.8.0",
    "pytest-timeout>=2.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"
markers = ["slow: long-running async tests"]
addopts = """
    -n 16 --dist=loadfile
    --timeout=10 --maxfail=5
    --durations=4
    -ra --tb=short
    -m "not slow"
"""
