[project]
name = "slop"
version = "0.1.0"
description = "Language model API client"
readme = "README.md"
authors = [
    { name = "Mikael Brockman", email = "mikael@brockman.se" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "trio>=0.28.0",
    "pydantic>=2.6.0",
    "rich>=13.9.4",
    "httpx-sse>=0.4.0",
    "tagflow>=0.6.0",
    "python-multipart>=0.0.20",
    "pydub>=0.25.1",
    "python-docx>=1.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
